добавил обновление пользователя и сделал небольшой рефакторинг
